@@ -85,4 +85,5 @@
     <string id="30535">Wählen Sie die Reihenfolge der Playliste</string>
     <string id="30536">Aktualisiere Playliste...</string>
     <string id="30537">Ab hier abspielen</string>
+    <string id="30538">Disliked Videos</string>
 </strings>
