@@ -1,4 +1,5 @@
 5.0.3~beta1 (2015-01-02)
+ADD: 'Disliked Videos'
 UPD: Polish (thx 2 D.K.)
 FIX: German translation
 FIX: some Frodo updates
